# ServerLogScraper

scraper/: Cargo.toml  config.json
scraper/src/: main.rs
scraper/src/config/: mod.rs
scraper/src/config_watcher/: mod.rs
scraper/src/node/: mod.rs
scraper/src/scraper/: mod.rs
web-server/: Cargo.toml  Dockerfile  docker-compose.yml
web-server/prometheus/: prometheus.yml
web-server/src/: main.rs
