[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"]}
ctrlc = { version = "3.0", features = ["termination"] }
serde_json = "1.0"
env_logger = "0.9.1"
log = "0.4.17"
notify = "5.0.0"
signal-hook = "0.3.14"
signal-hook-tokio = "0.3.1"
