[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
rocket = {version ="0.5.0-rc.2", features = ["json"]}
lipsum = "0.8.2"
rand = "0.8.5"
rocket_prometheus = "0.10.0-rc.3"
once_cell = "1.16.0"
